--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -230,6 +230,8 @@ input:-webkit-autofill {
   border: 1px solid #000;
   border-radius: 10px;
   max-width: 100%;
+  min-width: 100%;
+  min-height: 150px;
   width: 100%;
   height: 150px;
   margin: 20px 0;
