--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,7 +23,7 @@
     <nav>
       <ul class="menu">
         <% if(isAuth){ %>
-          <li class="menu-item"><a id="logout" href="#" onclick="return doLogout(this);">Log out</a></li>
+          <li class="menu-item"><a id="logout" href="#">Log out</a></li>
         <% } %>
       </ul>
     </nav>
