--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,7 +13,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../stylesheets/reset.css">
   <link rel="stylesheet" href="../stylesheets/style.css">
-  <title>truthPost</title>
+  <title>Micropost | 自由に投稿しよう</title>
 </head>
 <body>
   <header class="header">
