--- a/views/top.ejs
+++ b/views/top.ejs
@@ -1,6 +1,6 @@
 <%- include("./header"); %>
-  <main class="common-main">
-    <section class="common-section">
+  <main class="common-main top-main">
+    <section class="common-section top-section">
         <div class="common-section__wrapper">
           <div class="user-area">
             <div class="user-icon">
@@ -53,7 +53,6 @@
         </div>
     </aside>
 </main>
-<script src="../javascripts/index.js"></script>
 <script src="../javascripts/top.js"></script>
 
 <%- include("./footer"); %>
